<resources>
    <string name="app_name">FOSKIN</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_shop">Shop</string>
    <string name="title_detect">Detect\n</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>

    <!-- Introduction -->
    <string name="title_menu_1">Unlock Your Skin’s Story with AI Acne Detection!</string>
    <string name="title_menu_2">Expert Guidance: Get Tailored Articles and Skincare Tips!</string>
    <string name="title_menu_3">Stay on Track: Personalized Daily Skincare Reminders!</string>
    <string name="desc_menu_1">Unlock your skin’s secrets with advanced AI that detects acne with precision. Receive a personalized analysis for a glowing future.</string>
    <string name="desc_menu_2">Get expert articles and tailored skincare advice to make informed choices for healthier, clearer skin.</string>
    <string name="desc_menu_3">Stay on track with your skincare routine with personalized reminders, helping you build healthy habits for long-term skin health.</string>
    <string name="started">Get Started</string>
    <string name="next">Next</string>

    <!-- Auth -->
    <string name="title_quick_survey1">Let us know more about you!</string>
    <string name="title_quick_survey2">What is your current skin condition?</string>
    <string name="alert_quick_survey">You can change this data in your profile</string>
    <string name="who_name_quick_survey">What’s your name?</string>
    <string name="who_email_quick_survey">What’s your email?</string>
    <string name="who_age_quick_survey">How old are you?</string>
    <string name="who_gender_quick_survey">What is your gender?</string>

    <!-- Home -->
    <string name="desc_banner_promo_home">Has your scan limit exceeded 5x a day? Don\'t worry.. you can upgrade to Premium and get additional limits now!!</string>

    <!-- Shop -->
    <string name="promo_month">November Promo</string>
    <string name="persentase_promo">-45%</string>
    <string name="btn_promo">Check Now</string>
    <string name="desc_promo">The FOSKIN 90% Centella Asiatica Extract</string>
    <string name="product_description">product banner</string>
    <string name="title_skincare">Skincare Routine</string>
    <string name="title_recommended">Recommended Today</string>
    <string name="rating_products">4.8</string>

    <!-- Quick Survey -->
    <string name="question">1 of 2 questions</string>

    <!-- Scan Product -->
    <string name="camera_button">camera_button</string>
    <string name="description_security">This camera is guaranteed safe to use, as it\'s only for analyzing the products you upload, so your privacy remains protected.</string>
    <string name="data_privacy">Data privacy</string>
    <string name="security">Security</string>
    <string name="description_scan_product">Make sure the light is bright enough, then adjust it so that the front or back of what you want to photograph is clearly visible. So, just take a photo!</string>
    <string name="title_scan_product">Product photo: front or back of product ingredients</string>
    <string name="title_validate_product_scan">Is the photo clear enough?</string>
    <string name="desc_validate_product_scan">Make sure the front or the ingredients of the product are fully visible, not blurry or cropped!</string>
    <string name="desc_error_validate_product_scan">If your image is blurry or unclear, we can’t analyze the product properly. Try uploading a clearer one for the best results!</string>
    <string name="title_error_validate_product_scan">Oops! The Image Isn’t Clear</string>
    <string name="title_ingredient_product">Ingredient Product</string>
    <string name="title_related_product">Related product</string>
    <string name="desc_result_scan_product">Contains Salicylic Acid to cleanse pores and prevent acne, Aloe Vera to soothe the skin, Vitamin E as an antioxidant, and Hyaluronic Acid to maintain the skin\'s natural moisture. Suitable for oily to acne-prone skin.</string>

    <!-- Bottom Sheet Layout -->
    <string name="desc_poduct_scan">Scan a product to find similar items or detailed information about it.</string>
    <string name="desc_face_recognition">Use Face Recognition to analyze your skin type and get personalized care recommendations.</string>
    <string name="title_bottomsheetlayout">Select the Option You Want</string>
    <string name="product_scan">Product Scan</string>
    <string name="termsAndPolicyText">By signing up, you agree to our Terms of Service and Privacy Policy</string>
    <string name="desc_detail_blog">Achieving glowing skin isn\'t just about external care; it’s a holistic process that involves nurturing your skin from within. A consistent skincare routine is the first step. This includes cleansing, toning, and moisturizing your skin every day. Cleansing removes dirt and oil, while toning restores the skin’s natural pH balance, and moisturizing ensures hydration. \n\n Diet also plays a vital role in your skin\'s health. Incorporating antioxidant-rich foods like berries, leafy greens, and nuts can protect your skin against free radicals that cause premature aging. Additionally, drinking at least eight glasses of water daily helps flush toxins from your system and keeps your skin plump and hydrated. \n\n Lastly, sun protection is a non-negotiable. Harmful UV rays can cause pigmentation, fine lines, and even skin cancer. Applying sunscreen with at least SPF 30 before stepping out, even on cloudy days, can prevent sun damage and maintain your skin’s youthful glow.</string>
    <string name="no_upcoming_alarm">Choose your item skincare in menu Routines</string>
    <string name="no_time_alarm">Set your time</string>


    <string name="google_maps_key">AIzaSyB5PNKVKY62rzVVI-Ys3IbnlUEaKle03rw</string>

</resources>